--- a/app/src/app.css
+++ b/app/src/app.css
@@ -42,11 +42,15 @@ li {
 a {
   text-decoration: none;
 }
-.node circle {
+g {
+  width: 20rem !important;
+}
+
+/* .node polygon {
   fill: grey;
   stroke: black;
   stroke-width: 1px;
-}
+} */
 
 .node text {
   font: 14px sans-serif;
@@ -66,6 +70,10 @@ a {
   width: 100%;
   height: 100%;
   overflow: auto;
+}
+
+.dropdown {
+  background: url('data:image/svg+xml;charset=US-ASCII,<svg%20xmlns%3D"http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg"%20viewBox%3D"0%200%20256%20448"%20enable-background%3D"new%200%200%20256%20448"><style%20type%3D"text%2Fcss">.arrow%7Bfill%3A%23424242%3B%7D<%2Fstyle><path%20class%3D"arrow"%20d%3D"M255.9%20168c0-4.2-1.6-7.9-4.8-11.2-3.2-3.2-6.9-4.8-11.2-4.8H16c-4.2%200-7.9%201.6-11.2%204.8S0%20163.8%200%20168c0%204.4%201.6%208.2%204.8%2011.4l112%20112c3.1%203.1%206.8%204.6%2011.2%204.6%204.4%200%208.2-1.5%2011.4-4.6l112-112c3-3.2%204.5-7%204.5-11.4z"%2F><%2Fsvg>%0A');
 }
 @media only screen and (max-width: 550px) {
   html {
